@@ -37,6 +37,9 @@ Version 1.13.6+dev:
  * WML Engine:
    * Removed LOW_MEM option when building.
    * Add color= attribute to [floating_text]
+   * Add ~CHAN() IPF that allows altering images according to formulas
+     It takes up to 4 WFL formulas, one for each channel (red, green,
+     blue, alpha); each works the same as the ~ADJUST_ALPHA() formula.
  * Miscellaneous and bug fixes:
    * Fixed severe lag/freeze on slow PCs (bug #25356)
    * Updated wmlscope to handle the square braces syntax in file paths
